# TemplateProject

./: .clang-format  .gitignore  CMakeLists.txt  build.ps1  vcpkg.json
src/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h
