################################################################################

cmake_minimum_required(VERSION 3.15)

project(TemplateProject)

################################################################################

add_subdirectory(src)

################################################################################
