################################################################################

cmake_minimum_required(VERSION 3.15)

set(CMAKE_SYSTEM_VERSION 8.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(TemplateProject)

################################################################################

add_subdirectory(src)

################################################################################
